# roboteam-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/protobuf/: command_pb2.py  command_pb2.pyi  debug_pb2.py  debug_pb2.pyi  gamestate_pb2.py  gamestate_pb2.pyi  grsim_commands_pb2.py  grsim_commands_pb2.pyi  grsim_packet_pb2.py  grsim_packet_pb2.pyi  grsim_replacement_pb2.py  grsim_replacement_pb2.pyi  logfile_pb2.py  logfile_pb2.pyi  pathfinding_pb2.py  pathfinding_pb2.pyi  robot_pb2.py  robot_pb2.pyi  ssl_detection_pb2.py  ssl_detection_pb2.pyi  ssl_game_controller_auto_ref_pb2.py  ssl_game_controller_auto_ref_pb2.pyi  ssl_game_controller_common_pb2.py  ssl_game_controller_common_pb2.pyi  ssl_game_controller_geometry_pb2.py  ssl_game_controller_team_pb2.py  ssl_game_controller_team_pb2.pyi  ssl_game_event_2019_pb2.py  ssl_game_event_2019_pb2.pyi  ssl_game_event_pb2.py  ssl_game_event_pb2.pyi  ssl_gc_api_pb2.py  ssl_gc_api_pb2.pyi  ssl_gc_change_pb2.py  ssl_gc_change_pb2.pyi  ssl_gc_ci_pb2.py  ssl_gc_ci_pb2.pyi  ssl_gc_common_pb2.py  ssl_gc_engine_config_pb2.py  ssl_gc_engine_config_pb2.pyi  (+38 more)
