[project]
name="roboteam-rl"
version="0.0.0"
description="Python reinforcement learning interface for ER-Force SSL robot soccer simulator."
readme="README.md"
requires-python = ">=3.10"
authors = [
    { name="Jesse Visser" }
]

[project.scripts]
rtt-rl = "main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120